governance-shared/baselines/3.8.0/ChronoPM-Portfolio/assets/templates/portfolio-weekly-template.md
---
doc_type: portfolio-weekly
portfolio: [项目集名称]
week: YYYY-Wxx
date_range: YYYY-MM-DD ~ YYYY-MM-DD
status: 草稿
author: AI辅助生成
generated_from: []
updated: YYYY-MM-DDTHH:MM
stale_after: YYYY-MM-DD
---

# 项目集汇总周报 - YYYY-Wxx

> **本模板仅用于 `portfolio/reports` 派生产物。** 禁止按本文件改写成员项目事实源。成员项目需变更时走内部 V-9，到对应 ChronoPM-Project 对话执行。对外白话确认，不对用户说「建议更新清单」。

## 1. 项目集概要

（一段话总结本周项目集整体进展、关键成果和重大风险）

## 2. 各子项目进展汇总

| 子项目 | 本周概要 | 里程碑状态 | 风险等级 | 成本偏差(CPI) | 人力配置率 |
|---|---|---|---|---|---|
| [子项目1] | [一句话概要] | [状态] | [高/中/低] | [x.xx] | [xx%] |
| [子项目2] | [一句话概要] | [状态] | [高/中/低] | [x.xx] | [xx%] |
| [子项目3] | [一句话概要] | [状态] | [高/中/低] | [x.xx] | [xx%] |

### 2.1 [子项目1名称]

**本周完成：**
- [事项1]（关联任务：TD-xxx）

**本周新增风险：**
- [风险描述]（关联风险：R-YYYYMMDD-NNN，等级：[高/中/低]）

**本周新增问题：**
- [问题描述]（关联问题：I-YYYYMMDD-NNN，状态：[状态]）

**延期任务：**
| 待办编号 | 标题 | 原计划 | 当前预计 | 延期天数 | 原因 |
|---|---|---|---|---|---|

**里程碑状态：**
| 里程碑 | 计划日期 | 当前状态 | 本周变化 |
|---|---|---|---|

### 2.2 [子项目2名称]

（同上结构）

### 2.3 [子项目3名称]

（同上结构）

## 3. 跨项目事项

### 3.1 跨项目资源调配
- [调配事项1]：从[子项目A]调配[姓名]至[子项目B]，原因：[原因]

### 3.2 跨项目依赖
- [依赖事项1]：[子项目A]的[交付物]阻塞[子项目B]的[任务]，预计解除时间：[日期]

### 3.3 跨项目风险
| Risk ID | 风险描述 | 影响子项目 | 等级 | 应对措施 |
|---|---|---|---|---|
| R-YYYYMMDD-NNN | [描述] | [子项目列表] | [等级] | [措施] |

## 4. 人员资源全景

### 4.1 资源当前状态
| 资源ID | 姓名 | 角色 | 所属项目 | 状态 | 分配方式 | B角 | 风险等级 |
|---|---|---|---|---|---|---|---|
| RES-001 | [姓名] | [角色] | [子项目] | [在岗/借出/休假] | [全职/兼职] | [B角姓名] | [低/中/高] |

### 4.2 本周人员流转
| 流转ID | 日期 | 姓名 | 流转类型 | 来源项目 | 目标项目 | 原因 | 备注 |
|---|---|---|---|---|---|---|---|
| RTF-YYYYMMDD-001 | YYYY-MM-DD | [姓名] | [流入/流出/借调/...] | [项目A] | [项目B] | [原因] | [备注] |

### 4.3 人力配置容忍度检查表

> 生成周报时由各成员项目最新合法日 `ai/projects/{名}/ai/todos/{date}/_index.md` **§1 花名册**实时聚合得出（本表为当期周报快照，不作为数据源被其他文件引用）。风险触发见本包 `references/05-resource-shared-rules.md`；命中后走内部 V-9，禁止直接写成员项目 risk-register。

| 子项目 | 需求人力 | 当前可用 | 人力配置率 | 容忍度下限 | 检查结果 | 触发风险规则 | 建议处置 |
|---|---|---|---|---|---|---|---|
| [子项目1] | [N] | [N] | [xx%] | [xx%] | [✅ 正常 / ⚠️ 低于下限] | [RR-NN 或 无] | [补员/借调/调排期/暂不处理] |
| [子项目2] | [N] | [N] | [xx%] | [xx%] | [✅ 正常 / ⚠️ 低于下限] | [RR-NN 或 无] | [补员/借调/调排期/暂不处理] |

> 字段说明：
> - **需求人力**：该子项目当前里程碑阶段所需角色×人数（参照计划文件资源统筹段，无则按关键角色齐备性判断）
> - **当前可用**：各项目 `_index` §1 中状态为在岗的人数；借出/请假/已出组不计入可用，仅列在备注
> - **人力配置率**：当前可用 / 需求人力
> - **检查结果**：配置率 < 容忍度下限 → ⚠️ 标注「资源风险触发」，并在周报末尾同步标注
> - **触发风险规则**：命中本包 `05-resource-shared-rules.md` RR-01~RR-08（如关键岗位无 B 角 → RR-01）；命中后内部 V-9 指向主归属项目 risk-register，不代写

**人力风险提示：**
- [风险提示1]：[子项目]人力配置率 xx%，低于容忍度下限 xx%，建议补充人员

## 5. 整体P&L

### 5.1 成本汇总
| 子项目 | 本周投入(h) | 累计投入(h) | 预算(h) | 本周成本(万) | 累计成本(万) | 预算(万) | CPI | 偏差率 |
|---|---|---|---|---|---|---|---|---|
| [子项目1] | [x] | [x] | [x] | [x] | [x] | [x] | [x.xx] | [x%] |
| [子项目2] | [x] | [x] | [x] | [x] | [x] | [x] | [x.xx] | [x%] |
| [子项目3] | [x] | [x] | [x] | [x] | [x] | [x] | [x.xx] | [x%] |
| **合计** | **[x]** | **[x]** | **[x]** | **[x]** | **[x]** | **[x]** | **[x.xx]** | **[x%]** |

### 5.2 成本趋势
- [趋势描述：本周成本偏差方向及原因]

## 6. 里程碑总览

| 子项目 | 当前里程碑 | 计划完成 | 预计完成 | 偏差 | 风险评估 |
|---|---|---|---|---|---|
| [子项目1] | M0x | [日期] | [日期] | [天数] | [高/中/低] |
| [子项目2] | M0x | [日期] | [日期] | [天数] | [高/中/低] |
| [子项目3] | M0x | [日期] | [日期] | [天数] | [高/中/低] |

## 7. 需协调事项

### 7.1 需管理层协调
- [事项1]：[描述]，建议：[建议]

### 7.2 跨项目需协调
- [事项1]：[描述]，涉及子项目：[列表]

## 8. 下周计划

### 8.1 各子项目重点
| 子项目 | 下周重点 | 关键里程碑 |
|---|---|---|
| [子项目1] | [重点] | [里程碑] |
| [子项目2] | [重点] | [里程碑] |
| [子项目3] | [重点] | [里程碑] |

### 8.2 项目集重点
- [项目集重点1]

## 状态推导说明

> 以下状态基于过程记录推导（非待办文件直接读取），已标注推导链路。摘自各成员项目周报与 WP §3b 实体行，本包不回写待办。

| 子项目 | 实体/模块 | 触发事件 | 来源 | 推导结论 | 待办文件状态 | 差异 |
|---|---|---|---|---|---|---|
| （无推导状态差异时填"无"） | | | | | | |

## 信息来源
- 子项目周报（generated_from）：
  - ai/projects/{子项目1}/ai/reports/weekly/YYYY/YYYY-Wxx.md
  - ai/projects/{子项目2}/ai/reports/weekly/YYYY/YYYY-Wxx.md
  - ai/projects/{子项目3}/ai/reports/weekly/YYYY/YYYY-Wxx.md
- 资源文件（事实源在各成员项目待办体系；集层仅指针）：
  - ai/projects/{子项目}/ai/todos/{最新合法日}/_index.md §1 花名册
  - ai/projects/{子项目}/ai/todos/{date}/{姓名}.md §0.5 进出组
  - ai/portfolio/resources/shared-resource-index.md（跨项目共享人员索引，只读指针）
- 成本文件：
  - ai/projects/{子项目}/ai/plans/budget.md

## 不确定项与待补充信息
- [不确定项1]

## Change Log

| Date | Change Type | Description | Source | Confirmed By |
|---|---|---|---|---|
